examples/test/testpolicy1408.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1408
  namespace: namespace302
spec:
  podSelector:
    matchLabels:
      key27: value40
      key28: value37
      key35: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value42
      podSelector:
        matchLabels:
          key49: value44
          key26: value40
          key9: value36
